Bump version to 1.8.0